<resources>
    <string name="back">Back</string>
    <string name="back_button_description">Back</string>
    <string name="continue_button">Continue</string>
    <string name="app_name">Smishing Detection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_saved_articles">No saved articles yet.</string>
    <string name="baseline_keyboard_arrow_right_24">Right Arrow</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="action_welcome_to_screen">Welcome Back</string>
    <string name="action_login_in">Login</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">App Logo</string>
    <string name="chat_assistant_btn">Get Support</string>
    <string name="chat_assistant_page">Support Chat</string>
    <string name="no_network_message">No available network. Please check your internet connection or try again later</string>
    <string name="login_page">Login</string>
    <string name="detections_str">Detections</string>
    <string name="menu_news">News</string>
    <string name="play_alert_text">Play Alert Text</string>
    <string name="menu_Cyber_news">ACCC Scamwatch News</string>
    <string name="menu_settings">Settings</string>
    <string name="account_page">Account</string>
    <string name="report_page">Report Smishing</string>
    <string name="filtering_page">Smishing Rules</string>
    <string name="debug">Debug</string>
    <string name="help_page">Help</string>
    <string name="sms_page">SMS Messages</string>
    <string name="detectionsBtn">View Detections</string>
    <string name="new_detectionsTxt">New detections</string>
    <string name="total_detectionsTxt">Total detections</string>
    <string name="password_changeBtn">Change Password</string>
    <string name="phone_changeBtn">Change Phone</string>
    <string name="email_changeBtn">Change Email</string>
    <string name="dark_modeBtn">Toggle Dark mode</string>
    <string name="delete_accountBtn">Delete account</string>
    <string name="sign_outBtn">Sign out</string>
    <string name="session_timeoutBtn">Session Timeout Settings</string>
    <string name="pin_changeBtn">Change Pin</string>
    <string name="terms_and_conditions">
&lt;b&gt;1.&lt;/b&gt; By using this app, you agree to comply with these terms.&lt;br/&gt;
    &lt;b&gt;2.&lt;/b&gt; The app is provided on an as is basis, with no guarantees of accuracy or availability.&lt;br/&gt;
    &lt;b&gt;3.&lt;/b&gt; You are responsible for ensuring you use the services in accordance with applicable laws.&lt;br/&gt;
    &lt;b&gt;4.&lt;/b&gt; Unauthorized reproduction, modification, or distribution of this app or its content is strictly prohibited.&lt;br/&gt;
    &lt;b&gt;5.&lt;/b&gt; We reserve the right to modify or discontinue the app without notice.&lt;br/&gt;
    &lt;b&gt;6.&lt;/b&gt; We respect your privacy and commit to protecting your data as per the privacy policy outlined herein.&lt;br/&gt;
    &lt;b&gt;7.&lt;/b&gt; Your personal data will only be used for purposes that you have explicitly agreed to.&lt;br/&gt;
    &lt;b&gt;8.&lt;/b&gt; Any disputes arising from the use of this app will be subject to the jurisdiction of [Your Location].&lt;br/&gt;&lt;br/&gt;

    &lt;b&gt;PRIVACY POLICY&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

    &lt;b&gt;1.&lt;/b&gt; We collect data to enhance your experience and improve our services.&lt;br/&gt;
    &lt;b&gt;2.&lt;/b&gt; Your data will never be sold or shared with third parties without your consent, except as required by law.&lt;br/&gt;
    &lt;b&gt;3.&lt;/b&gt; Cookies may be used to personalize content and ads.&lt;br/&gt;
    &lt;b&gt;4.&lt;/b&gt; By continuing to use the app, you consent to our use of cookies.&lt;br/&gt;&lt;br/&gt;

    &lt;b&gt;DISCLAIMER&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

    &lt;b&gt;1.&lt;/b&gt; This app is provided as-is without any warranties of any kind.&lt;br/&gt;
    &lt;b&gt;2.&lt;/b&gt; We do not guarantee uninterrupted or error-free use of the app.&lt;br/&gt;
    &lt;b&gt;3.&lt;/b&gt; We are not liable for any damages resulting from the use of this app.&lt;br/&gt;
    &lt;b&gt;4.&lt;/b&gt; Always use caution when interacting with unknown parties through the app.&lt;br/&gt;&lt;br/&gt;
</string>
    <string name="change_password_page">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="change_email_page">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm Email</string>
    <string name="sign_out_page">Sign Out</string>
    <string name="confirmSOTxt">Are you sure you want to sign out?</string>
    <string name="cancelSOBtn">Cancel</string>
    <string name="delete_acc_page">Delete Account</string>
    <string name="confirmDelTxt">Are you sure?</string>
    <string name="confirmPNBtn">Change Phone Number</string>
    <string name="confirmPN">Enter your phone number:</string>
    <string name="phone_number_page">Change Phone Number</string>
    <string name="confirm_PNTxt">New number must be associated with this phone.</string>
    <string name="cancelDelBtn">Cancel</string>
    <string name="confirmDelBtn">Yes</string>
    <string name="confirmPW">Enter your password:</string>
    <string name="phone_number">Phone Number</string>
    <string name="report_message_prompt">Smishing message</string>
    <string name="action_report">Send report</string>
    <string name="account_btn">Account</string>
    <string name="notifications_btn">Notifications</string>
    <string name="filtering_btn">Filtering</string>
    <string name="report_btn">Report</string>
    <string name="help_btn">Help</string>
    <string name="about_btn">Privacy Policy</string>
    <string name="keywords_label">Keywords</string>
    <string name="pn_label">Phone numbers</string>
    <string name="set_keyword_btn">Set keywords</string>
    <string name="set_pn_btn">Set numbers</string>
    <string name="name_label">Full Name</string>
    <string name="pin_label">Pin</string>
    <string name="email_label">Email</string>
    <string name="Pin_label">Pin</string>
    <string name="pn_register_label">Phone Number</string>
    <string name="pw_register_label">Password</string>
    <string name="pw2_register_label">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="view_terms_and_conditions">Click here to accept the terms and complete registration.</string>
    <string name="agree_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="delete_text">Delete</string>
    <string name="pnTitle">Number: </string>
    <string name="msgTitle">Message: </string>
    <string name="dateTitle">Date: </string>
    <string name="info_icon">info</string>
    <string name="new_icon">info</string>
    <string name="time_icon">info</string>
    <string name="notification_header">Notifications</string>
    <string name="news_notification_title">News Updates</string>
    <string name="smishing_detection_notification_title">Smishing Detections</string>
    <string name="spam_detection_notification_title">Spam Detections</string>
    <string name="password_security_check">Password Security Checks</string>
    <string name="backup_reminder">Backup Reminders</string>
    <string name="update_notifications">Update Notifications</string>
    <string name="incident_reports">Incident Reports</string>
    <string name="open_notification_settings">Device Notification Settings</string>
    <string name="detection_notification_header">Detection Notifications</string>
    <string name="push_notification_header">Push Notifications</string>
    <string name="system_maintenance_header">System Maintenance Notifications</string>
    <string name="detection_channel_name">Detection Alerts</string>
    <string name="detection_channel_id">detections_channel</string>
    <string name="detection_channel_desc">Detection Notifications Channel</string>
    <string name="push_channel_name">Push Notifications</string>
    <string name="push_channel_id">push_channel</string>
    <string name="push_channel_desc">Push Notifications Channel</string>
    <string name="system_channel_name">System Notifications</string>
    <string name="system_channel_id">system_channel</string>
    <string name="system_channel_desc">system Notifications Channel</string>
    <string name="smish_pref_key">smish_notif_pref</string>
    <string name="spam_pref_key">spam_notif_pref</string>
    <string name="news_pref_key">news_notif_pref</string>
    <string name="incident_pref_key">incident_notif_pref</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="join_in_on_the_journey_to_better_cybersecurity">Join in on the Journey to Better Cybersecurity</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="get_your_personal_risk_score_based_on_sms_habits_security_practices_and_other_risk_parameters">Get your personal risk score based on SMS habits, security practices, and other risk parameters.</string>
    <string name="protecting_privacy">Protecting Privacy</string>
    <string name="all_responses_will_be_anonymised_and_will_not_be_stored_or_shared_without_your_consent">All responses will be anonymised and will not be stored or shared without your consent.</string>
    <string name="ethical_considerations">Ethical Considerations</string>
    <string name="this_scanner_uses_age_based_risk_adjustments_informed_by_cybersecurity_research_not_personal_judgments">This scanner uses age-based risk adjustments informed by cybersecurity research — not personal judgments.</string>
    <string name="user_agreement">User Agreement</string>
    <string name="by_clicking_scan_n_you_accept_the_above_conditions_n_this_is_a_generalised_estimate_not_a_guaranteed_assessment">By clicking ‘Scan’:\n• You accept the above conditions.\n• This is a generalised estimate, not a guaranteed assessment.</string>
    <string name="risky_sms_patterns">Risky SMS Patterns</string>
    <string name="do_not_detect_suspicious_message_patterns_from_my_device">Do not detect suspicious message patterns from my device.</string>
    <string name="age_based_adjustments">Age-based Adjustments</string>
    <string name="do_not_apply_risk_adjustment_based_on_age_informed_trends">Do not apply risk adjustment based on age-informed trends.</string>
    <string name="security_habits">Security Habits</string>
    <string name="do_not_check_for_security_apps_installation_and_spam_filter_enabling">Do not check for security apps installation and spam filter enabling.</string>
    <string name="scan">SCAN</string>
    <string name="smishing_risk_scanner">SMISHING RISK SCANNER</string>
</resources>