<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.onboarding.LoginCreateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Group container for content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/image_size_large"
                android:layout_height="@dimen/image_size_large"
                android:layout_marginBottom="24dp"
                android:contentDescription="Logo"
                android:scaleType="fitCenter"
                android:src="@drawable/new_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Title -->
            <TextView
                android:id="@+id/createAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/logoImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/subTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/join_in_on_the_journey_to_better_cybersecurity"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/createAccountTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Sign Up -->
            <Button
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="56dp"
                android:background="@drawable/buttons_rounded"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/subTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Log In -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_clear_rounded"
                android:text="@string/log_in"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/signUpButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

<!--    <TextView->
<!-        android:id="@+id/termsConditionsText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:text="Click here for Terms and Conditions"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/loginButton" />-->
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
